--- a/InventoryManagementUI/Views/Company/Customer.cshtml
+++ b/InventoryManagementUI/Views/Company/Customer.cshtml
@@ -32,7 +32,7 @@
                     <td>@customer.Taxnumber</td>
 
                     <td>@Html.ActionLink("Edit", "#", "Company", new { customer.Id }, new { @class = "btn btn-teal" })</td>
-                    <td>@Html.ActionLink("Detail", "#", "Company", new { customer.Id }, new { @class = "btn btn-danger" })</td>
+                    <td>@Html.ActionLink("Detail", "#", "Company", new { customer.Id }, new { @class = "btn" })</td>
                 </tr>
                 }
 
