--- a/InventoryManagementUI/Views/Company/CreateStaff.cshtml
+++ b/InventoryManagementUI/Views/Company/CreateStaff.cshtml
@@ -3,7 +3,20 @@
     ViewBag.Title = "CreateStaff";
     Layout = "~/Views/Shared/_CompanyLayout.cshtml";
 }
-<h4>Create Staff</h4>
+
+<div class="br-pagetitle pd-0">
+    <table class="pd-0">
+        <tr>
+
+            <td>
+                <h4>Create Staff</h4>
+            </td>
+        </tr>
+    </table>
+
+
+
+</div>
 <div class="row row-sm mg-b-20">
     <div class="br-section-wrapper">
 
