--- a/InventoryManagementUI/Views/Company/AddStore.cshtml
+++ b/InventoryManagementUI/Views/Company/AddStore.cshtml
@@ -4,7 +4,20 @@
     Layout = "~/Views/Shared/_CompanyLayout.cshtml";
 }
 
-<h4 class="br-section-label">Add Store</h4>
+
+<div class="br-pagetitle pd-0">
+    <table class="pd-0">
+        <tr>
+
+            <td>
+                <h4>Add Store</h4>
+            </td>
+        </tr>
+    </table>
+
+
+
+</div>
 
 <div class="col-xl-6">
     <div class="form-layout form-layout-4">
