--- a/InventoryManagementUI/Views/Company/Product.cshtml
+++ b/InventoryManagementUI/Views/Company/Product.cshtml
@@ -6,7 +6,7 @@
 @Html.ActionLink("Add New Product", "AddProduct", "Company", new { @class = "btn btn-success btn-block mg-b-10" })
 <div class="br-section-wrapper">
     <h6 class="br-section-label">Product DataTable</h6>
-      <span class="text-danger">@TempData["NotProduct"]</span>
+    <span class="text-danger">@TempData["NotProduct"] @TempData["DeleteNum"]</span>
     <div class="table-wrapper">
         <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info" style="width: 935px;">
             <thead>
