--- a/InventoryManagementUI/Views/Account/CreateCompanyAccount.cshtml
+++ b/InventoryManagementUI/Views/Account/CreateCompanyAccount.cshtml
@@ -22,7 +22,7 @@
 <body>
     <div class="d-flex align-items-center justify-content-center ht-100v">
 
-        <img src="~/Content/img/Background/IMG_20190404_142947.jpg" class="wd-100p opacity-1 ht-100p object-fit-cover" />
+        <img src="~/Content/img/Background/bg-register4.jpg" class="wd-100p opacity-1 ht-100p object-fit-cover" />
         <!--  <video id="headVideo" class="pos-absolute a-0 wd-100p ht-100p object-fit-cover" autoplay muted loop>
             <source src="~/Content/img/bg-register4.jpg" type="image/jpeg">
 
@@ -33,7 +33,7 @@
 
             <div class="overlay-body bg-black-7 d-flex align-items-center justify-content-center">
                 <div class="login-wrapper wd-300 wd-xs-350 pd-25 pd-xs-40 rounded bg-black-6" style="border: #17A2B8 1px solid">
-                    <div class="signin-logo tx-center tx-sm-20 tx-bold tx-white"><span class="tx-sm-16">[</span> Inventory <span class="tx-info">Management</span> <span class="tx-normal">]</span></div>
+                    <div class="signin-logo tx-center tx-sm-20 tx-bold tx-white"><img src="~/Content/img/Logoelbow-theme.png" alt="elbow-theme" /></div>
                     <div class="tx-white-5 tx-center mg-b-60"></div>
                     <div class="form-group">
                         <input type="text" class="form-control fc-outline-dark bd-1" required name="TaxNumber" style="border: solid 1px white;" placeholder="Enter your TaxNumber">
@@ -54,6 +54,7 @@
 
                     </div><!-- form-group -->
                     <button type="submit" class="btn btn-info btn-block">Create Account</button>
+                <div class="text-center"><span class="text-danger text-center">@ViewBag.Company</span></div>
                     <div class="mg-t-60 tx-center">Not yet a member? <a href="~/Account/CompanyLogin" class="tx-info">Login</a></div>
                 </div><!-- login-wrapper -->
             </div><!-- overlay-body -->
