--- a/InventoryManagementUI/Views/Company/EditCompanyProfile.cshtml
+++ b/InventoryManagementUI/Views/Company/EditCompanyProfile.cshtml
@@ -21,7 +21,7 @@
 
 <div class="row mg-l-10">
     <div class="br-section-wrapper">
-
+      <!--Üyelik işeminden sonra addres güncellemisi yapılacak uyuarısı yazılacak ve company logo ekleme bölümü yazılacak-->
 
         @using (Html.BeginForm("EditCompanyProfile", "Company", FormMethod.Post))
         {
