--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -48,7 +48,10 @@
 </head>
 <body>
     <!-- ########## START: LEFT PANEL ########## -->
-    <div class="br-logo"> <a href="#"><span>[</span>Inventory <i>Management</i><span>]</span></a></div>
+    <div class="br-logo">
+        
+        <img src="~/Content/img/Logoelbow-theme.png" width="190" height="45"/>
+    </div>
 
     <div class="br-sideleft overflow-y-auto">
         <label class="sidebar-label pd-x-10 mg-t-20">Navigation</label>
