--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -25,7 +25,7 @@
     <!-- Meta -->
     <meta name="description" content=".">
     <meta name="author" content="">
-    <title>@ViewBag.Title | Company Dashboard | InventoryManagement</title>
+    <title>@ViewBag.Title | Elbow Contact</title>
     <!-- vendor css -->
     <link href="~/Content/lib/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="~/Content/lib/Ionicons/css/ionicons.css" rel="stylesheet">
@@ -50,7 +50,7 @@
     <!-- ########## START: LEFT PANEL ########## -->
     <div class="br-logo">
         
-        <img src="~/Content/img/Logoelbow-theme.png" width="190" height="45"/>
+        <img src="~/Content/img/Logo/AdminLogo.png" width="190" height="46"/>
     </div>
 
     <div class="br-sideleft overflow-y-auto">
