--- a/InventoryManagementUI/Views/Account/CreateCompanyAccount.cshtml
+++ b/InventoryManagementUI/Views/Account/CreateCompanyAccount.cshtml
@@ -33,10 +33,10 @@
 
             <div class="overlay-body bg-black-7 d-flex align-items-center justify-content-center">
                 <div class="login-wrapper wd-300 wd-xs-350 pd-25 pd-xs-40 rounded bg-black-6" style="border: #17A2B8 1px solid">
-                    <div class="signin-logo tx-center tx-sm-20 tx-bold tx-white"><img src="~/Content/img/Logoelbow-theme.png" alt="elbow-theme" /></div>
+                    <div class="signin-logo tx-center tx-sm-20 tx-bold tx-white"><img src="~/Content/img/Logo/AdminLogo.png" alt="elbow-theme" /></div>
                     <div class="tx-white-5 tx-center mg-b-60"></div>
                     <div class="form-group">
-                        <input type="text" class="form-control fc-outline-dark bd-1" required name="TaxNumber" style="border: solid 1px white;" placeholder="Enter your TaxNumber">
+                        <input type="text" class="form-control fc-outline-dark bd-1" required maxlength="10" minlength='10' name="TaxNumber" style="border: solid 1px white;" placeholder="Enter your TaxNumber">
                     </div><!-- form-group -->
 
                     <div class="form-group">
@@ -44,7 +44,12 @@
                     </div><!-- form-group -->
                     <!-- Personel Sayısına Göre Ücret belirnecek -->
                     <div class="form-group">
-                        <input type="number" class="form-control fc-outline-dark bd-1" name="PersonalNumber" style="border: solid 1px white;" placeholder="Enter your Personal Number">
+                        <select class="form-control fc-outline-dark bd-1">
+                            <option class="form-control fc-outline-dark bd-1 text-secondary" value="value">Free</option>
+                            <option class="form-control fc-outline-dark bd-1 text-secondary" value="value">Paket 1</option>
+                            <option class="form-control fc-outline-dark bd-1 text-secondary" value="value">Paket 2</option>
+                            <option class="form-control fc-outline-dark bd-1 text-secondary" value="value">Paket 3</option>
+                        </select>
                     </div><!-- form-group -->
                     <div class="form-group">
                         <input type="email" class="form-control fc-outline-dark bd-1" name="Email" maxlength="50" required style="border: solid 1px white;" placeholder="Enter your Email">
