Project Revised. CustomerController + Customer;List +,Detail +,Add.cshtml + ,ProductController + Product;List +,Detail ,Edit,+,Add.cshtml + & StoreController +Store;List +,+,Add.cshtml +

--- a/InventoryManagementUI/Views/Customer/Add.cshtml
+++ b/InventoryManagementUI/Views/Customer/Add.cshtml
@@ -10,7 +10,7 @@
 <div class="row row-sm mg-b-20">
     <div class="br-section-wrapper">
 
-        @using (Html.BeginForm("AddCustomer", "Company", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("Add", "Customer", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             <div class="form-layout form-layout-1">
 
