--- a/InventoryManagementUI/Views/Product/Add.cshtml
+++ b/InventoryManagementUI/Views/Product/Add.cshtml
@@ -21,7 +21,7 @@
 <div class="row row-sm mg-b-20">
     <div class="br-section-wrapper">
 
-        @using (Html.BeginForm("AddProduct", "Company", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("Add", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             <div class="form-layout form-layout-1">
 
