--- a/InventoryManagementUI/Views/Store/List.cshtml
+++ b/InventoryManagementUI/Views/Store/List.cshtml
@@ -7,7 +7,7 @@
 
 
 
-@Html.ActionLink("Add New Store", "AddStore", "Company", new { @class = "btn btn-success btn-block mg-b-10" })
+@Html.ActionLink("Add New Store", "Add", "Store", new { @class = "btn btn-success btn-block mg-b-10" })
 <div class="br-section-wrapper">
     <h6 class="br-section-label">Store DataTable</h6>
     <div class="table-wrapper">
