--- a/InventoryManagementUI/Views/Store/Add.cshtml
+++ b/InventoryManagementUI/Views/Store/Add.cshtml
@@ -22,7 +22,7 @@
 <div class="col-xl-6">
     <div class="form-layout form-layout-4">
 
-        @using (Html.BeginForm("AddStore", "Company", FormMethod.Post))
+        @using (Html.BeginForm("Add", "Store", FormMethod.Post))
         {
 
             <div class="row mg-t-20">
